# aoc2023

./: .gitignore  Cargo.toml
src/: Day2.cs  combinations.rs  day.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day13_22.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  graph.rs  grid.rs  main.rs  ranges.rs  slope_descent.rs  vector.rs
src/backtracking/: backtracking.rs  mod.rs  sudoku.rs
