[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horner = "0.2.2"
indexmap = "2.1.0"
itertools = "0.12.0"
nalgebra = "0.32.3"
num = "0.4.1"
pathfinding = "4.4.0"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
